asgn3/src/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE
    COMMENTSLINE
    COMMENTDELIM

Grammar

Rule 0     S' -> start
Rule 1     start -> compilation_unit
Rule 2     compilation_unit -> class_declarations
Rule 3     compilation_unit -> using_directives class_declarations
Rule 4     using_directives -> using_directive
Rule 5     using_directives -> using_directives using_directive
Rule 6     using_directive -> USING identifier TERMINATOR
Rule 7     class_declarations -> class_declarations class_declaration
Rule 8     class_declarations -> class_declaration
Rule 9     class_declaration -> modifiers CLASS identifier class_body TERMINATOR
Rule 10    class_declaration -> CLASS identifier class_body TERMINATOR
Rule 11    class_declaration -> CLASS identifier class_body
Rule 12    class_declaration -> modifiers CLASS identifier class_body
Rule 13    class_body -> LBRACE class_member_declarations RBRACE
Rule 14    class_body -> LBRACE RBRACE
Rule 15    identifier -> IDENTIFIER
Rule 16    class_member_declarations -> class_member_declaration
Rule 17    class_member_declarations -> class_member_declarations class_member_declaration
Rule 18    class_member_declaration -> field_declaration
Rule 19    class_member_declaration -> method_declaration
Rule 20    class_member_declaration -> constructor_declaration
Rule 21    class_member_declaration -> destructor_declaration
Rule 22    field_declaration -> modifiers type variable_declarators TERMINATOR
Rule 23    field_declaration -> type variable_declarators TERMINATOR
Rule 24    type -> reference_type
Rule 25    type -> type_parameter
Rule 26    reference_type -> class_type
Rule 27    reference_type -> array_type
Rule 28    class_type -> proper_identifier
Rule 29    class_type -> OBJECT
Rule 30    proper_identifier -> prefix identifier
Rule 31    prefix -> identifier MEMBERACCESS
Rule 32    prefix -> prefix identifier MEMBERACCESS
Rule 33    array_type -> non_array_type LBRACKET RBRACKET
Rule 34    non_array_type -> type
Rule 35    type_parameter -> identifier
Rule 36    type_parameter -> predefined_type
Rule 37    variable_declarators -> variable_declarator
Rule 38    variable_declarators -> variable_declarators COMMA variable_declarator
Rule 39    variable_declarator -> identifier
Rule 40    variable_declarator -> identifier EQUALS variable_initializer
Rule 41    variable_initializer -> expression
Rule 42    variable_initializer -> array_initializer
Rule 43    array_initializer -> LBRACE variable_initializer_list RBRACE
Rule 44    array_initializer -> LBRACE RBRACE
Rule 45    array_initializer -> LBRACE variable_initializer_list COMMA RBRACE
Rule 46    variable_initializer_list -> variable_initializer
Rule 47    variable_initializer_list -> variable_initializer_list COMMA variable_initializer
Rule 48    method_declaration -> method_header
Rule 49    method_declaration -> method_body
Rule 50    method_header -> type member_name LPAREN fixed_parameters RPAREN
Rule 51    method_header -> modifiers type member_name LPAREN fixed_parameters RPAREN
Rule 52    method_header -> type member_name LPAREN RPAREN
Rule 53    method_header -> modifiers type member_name LPAREN RPAREN
Rule 54    method_header -> VOID member_name LPAREN fixed_parameters RPAREN
Rule 55    method_header -> modifiers VOID member_name LPAREN fixed_parameters RPAREN
Rule 56    method_header -> VOID member_name LPAREN RPAREN
Rule 57    method_header -> modifiers VOID member_name LPAREN RPAREN
Rule 58    modifiers -> modifier
Rule 59    modifiers -> modifiers modifier
Rule 60    modifier -> PUBLIC
Rule 61    modifier -> PRIVATE
Rule 62    member_name -> identifier
Rule 63    method_body -> block
Rule 64    method_body -> TERMINATOR
Rule 65    fixed_parameters -> fixed_parameter
Rule 66    fixed_parameters -> fixed_parameters COMMA fixed_parameter
Rule 67    fixed_parameter -> type identifier default_argument
Rule 68    fixed_parameter -> type identifier
Rule 69    default_argument -> EQUALS expression
Rule 70    constructor_declaration -> constructor_declarator constructor_body
Rule 71    constructor_declarator -> identifier LPAREN fixed_parameters RPAREN
Rule 72    constructor_declarator -> identifier LPAREN RPAREN
Rule 73    constructor_body -> block
Rule 74    constructor_body -> TERMINATOR
Rule 75    destructor_declaration -> TILDE identifier LPAREN RPAREN destructor_body
Rule 76    destructor_body -> block
Rule 77    destructor_body -> TERMINATOR
Rule 78    block -> LBRACE RBRACE
Rule 79    block -> LBRACE statement_list RBRACE
Rule 80    statement_list -> statement
Rule 81    statement_list -> statement_list statement
Rule 82    statement -> local_variable_declaration TERMINATOR
Rule 83    statement -> embedded_statement
Rule 84    embedded_statement -> block
Rule 85    embedded_statement -> TERMINATOR
Rule 86    embedded_statement -> statement_expression TERMINATOR
Rule 87    embedded_statement -> if_statement
Rule 88    embedded_statement -> iteration_statement
Rule 89    embedded_statement -> break_statement
Rule 90    embedded_statement -> continue_statement
Rule 91    embedded_statement -> return_statement
Rule 92    break_statement -> BREAK TERMINATOR
Rule 93    continue_statement -> CONTINUE TERMINATOR
Rule 94    return_statement -> RETURN TERMINATOR
Rule 95    return_statement -> RETURN expression TERMINATOR
Rule 96    literal -> INTCONST
Rule 97    literal -> STRCONST
Rule 98    literal -> CHARCONST
Rule 99    local_variable_declaration -> type local_variable_declarators
Rule 100   local_variable_declarators -> local_variable_declarator
Rule 101   local_variable_declarators -> local_variable_declarators COMMA local_variable_declarator
Rule 102   local_variable_declarator -> identifier
Rule 103   local_variable_declarator -> identifier EQUALS local_variable_initializer
Rule 104   local_variable_initializer -> expression
Rule 105   statement_expression -> object_creation_expression
Rule 106   statement_expression -> assignment
Rule 107   statement_expression -> invocation_expression
Rule 108   statement_expression -> post_increment_expression
Rule 109   statement_expression -> post_decrement_expression
Rule 110   invocation_expression -> primary_expression LPAREN argument_list RPAREN
Rule 111   invocation_expression -> primary_expression LPAREN RPAREN
Rule 112   invocation_expression -> identifier LPAREN RPAREN
Rule 113   invocation_expression -> identifier LPAREN argument_list RPAREN
Rule 114   invocation_expression -> proper_identifier LPAREN argument_list RPAREN
Rule 115   invocation_expression -> proper_identifier LPAREN RPAREN
Rule 116   if_statement -> IF LPAREN expression RPAREN embedded_statement
Rule 117   if_statement -> IF LPAREN expression RPAREN embedded_statement ELSE embedded_statement
Rule 118   iteration_statement -> WHILE LPAREN expression RPAREN embedded_statement
Rule 119   expression -> non_assignment_expression
Rule 120   expression -> assignment
Rule 121   assignment -> unary_expression assignment_operator expression
Rule 122   assignment -> identifier assignment_operator expression
Rule 123   assignment_operator -> EQUALS
Rule 124   assignment_operator -> PLUSEQUAL
Rule 125   assignment_operator -> MINUSEQUAL
Rule 126   unary_expression -> primary_expression
Rule 127   unary_expression -> PLUS unary_expression
Rule 128   unary_expression -> PLUS identifier
Rule 129   unary_expression -> MINUS unary_expression
Rule 130   unary_expression -> MINUS identifier
Rule 131   unary_expression -> LNOT unary_expression
Rule 132   unary_expression -> LNOT identifier
Rule 133   unary_expression -> TILDE unary_expression
Rule 134   unary_expression -> TILDE identifier
Rule 135   primary_expression -> primary_no_array_creation_expression
Rule 136   primary_expression -> array_creation_expression
Rule 137   primary_no_array_creation_expression -> literal
Rule 138   primary_no_array_creation_expression -> parenthesized_expression
Rule 139   primary_no_array_creation_expression -> member_access
Rule 140   primary_no_array_creation_expression -> element_access
Rule 141   primary_no_array_creation_expression -> post_increment_expression
Rule 142   primary_no_array_creation_expression -> invocation_expression
Rule 143   primary_no_array_creation_expression -> post_decrement_expression
Rule 144   primary_no_array_creation_expression -> object_creation_expression
Rule 145   primary_no_array_creation_expression -> typeof_expression
Rule 146   parenthesized_expression -> LPAREN expression RPAREN
Rule 147   member_access -> primary_expression MEMBERACCESS identifier
Rule 148   member_access -> iMEMAi
Rule 149   member_access -> predefined_type MEMBERACCESS identifier
Rule 150   predefined_type -> INT
Rule 151   predefined_type -> CHAR
Rule 152   element_access -> primary_no_array_creation_expression LBRACKET expression_list RBRACKET
Rule 153   element_access -> identifier LBRACKET expression_list RBRACKET
Rule 154   expression_list -> expression
Rule 155   expression_list -> expression_list COMMA expression
Rule 156   post_increment_expression -> primary_expression INCREMENT
Rule 157   post_increment_expression -> identifier INCREMENT
Rule 158   post_decrement_expression -> primary_expression DECREMENT
Rule 159   post_decrement_expression -> identifier DECREMENT
Rule 160   object_creation_expression -> NEW type LPAREN argument_list RPAREN object_or_collection_initializer
Rule 161   object_creation_expression -> NEW type LPAREN argument_list RPAREN
Rule 162   object_creation_expression -> NEW type LPAREN RPAREN
Rule 163   object_creation_expression -> NEW type object_or_collection_initializer
Rule 164   argument_list -> argument
Rule 165   argument_list -> argument_list COMMA argument
Rule 166   argument -> argument_name argument_value
Rule 167   argument -> argument_value
Rule 168   argument_name -> identifier COLON
Rule 169   argument_value -> expression
Rule 170   object_or_collection_initializer -> object_initializer
Rule 171   object_or_collection_initializer -> collection_initializer
Rule 172   object_initializer -> LBRACE member_initializer_list RBRACE
Rule 173   object_initializer -> LBRACE RBRACE
Rule 174   object_initializer -> LBRACE member_initializer_list COMMA RBRACE
Rule 175   member_initializer_list -> member_initializer
Rule 176   member_initializer_list -> member_initializer_list COMMA member_initializer
Rule 177   member_initializer -> identifier EQUALS initializer_value
Rule 178   initializer_value -> expression
Rule 179   initializer_value -> object_or_collection_initializer
Rule 180   collection_initializer -> LBRACE element_initializer_list RBRACE
Rule 181   collection_initializer -> LBRACE element_initializer_list COMMA RBRACE
Rule 182   element_initializer_list -> element_initializer
Rule 183   element_initializer_list -> element_initializer_list COMMA element_initializer
Rule 184   element_initializer -> non_assignment_expression
Rule 185   element_initializer -> LBRACE expression_list RBRACE
Rule 186   array_creation_expression -> NEW non_array_type LBRACKET expression RBRACKET
Rule 187   array_creation_expression -> NEW array_type array_initializer
Rule 188   typeof_expression -> TYPEOF LPAREN type RPAREN
Rule 189   typeof_expression -> TYPEOF LPAREN unbound_type_name RPAREN
Rule 190   typeof_expression -> TYPEOF LPAREN VOID RPAREN
Rule 191   unbound_type_name -> iMEMAi
Rule 192   unbound_type_name -> unbound_type_name MEMBERACCESS identifier
Rule 193   iMEMAi -> identifier MEMBERACCESS identifier
Rule 194   non_assignment_expression -> conditional_expression
Rule 195   conditional_expression -> conditional_or_expression
Rule 196   conditional_or_expression -> conditional_and_expression
Rule 197   conditional_or_expression -> conditional_or_expression CONOR conditional_and_expression
Rule 198   conditional_and_expression -> inclusive_or_expression
Rule 199   conditional_and_expression -> conditional_and_expression CONAND inclusive_or_expression
Rule 200   inclusive_or_expression -> exclusive_or_expression
Rule 201   inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 202   exclusive_or_expression -> and_expression
Rule 203   exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 204   and_expression -> equality_expression
Rule 205   and_expression -> and_expression AND equality_expression
Rule 206   equality_expression -> relational_expression
Rule 207   equality_expression -> equality_expression EQ relational_expression
Rule 208   equality_expression -> equality_expression NE relational_expression
Rule 209   relational_expression -> shift_expression
Rule 210   relational_expression -> relational_expression LT shift_expression
Rule 211   relational_expression -> relational_expression GT shift_expression
Rule 212   relational_expression -> relational_expression LEQ shift_expression
Rule 213   relational_expression -> relational_expression GEQ shift_expression
Rule 214   shift_expression -> additive_expression
Rule 215   shift_expression -> shift_expression LSHIFT additive_expression
Rule 216   shift_expression -> shift_expression RSHIFT additive_expression
Rule 217   additive_expression -> multiplicative_expression
Rule 218   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 219   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 220   multiplicative_expression -> unary_expression
Rule 221   multiplicative_expression -> identifier
Rule 222   multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 223   multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 224   multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 225   multiplicative_expression -> multiplicative_expression TIMES identifier
Rule 226   multiplicative_expression -> multiplicative_expression DIVIDE identifier
Rule 227   multiplicative_expression -> multiplicative_expression MOD identifier

Terminals, with rules where they appear

AND                  : 205
BREAK                : 92
CHAR                 : 151
CHARCONST            : 98
CLASS                : 9 10 11 12
COLON                : 168
COMMA                : 38 45 47 66 101 155 165 174 176 181 183
COMMENTDELIM         : 
COMMENTSLINE         : 
CONAND               : 199
CONOR                : 197
CONTINUE             : 93
DECREMENT            : 158 159
DIVIDE               : 223 226
ELSE                 : 117
EQ                   : 207
EQUALS               : 40 69 103 123 177
GEQ                  : 213
GT                   : 211
IDENTIFIER           : 15
IF                   : 116 117
INCREMENT            : 156 157
INT                  : 150
INTCONST             : 96
LBRACE               : 13 14 43 44 45 78 79 172 173 174 180 181 185
LBRACKET             : 33 152 153 186
LEQ                  : 212
LNOT                 : 131 132
LPAREN               : 50 51 52 53 54 55 56 57 71 72 75 110 111 112 113 114 115 116 117 118 146 160 161 162 188 189 190
LSHIFT               : 215
LT                   : 210
MEMBERACCESS         : 31 32 147 149 192 193
MINUS                : 129 130 219
MINUSEQUAL           : 125
MOD                  : 224 227
NE                   : 208
NEW                  : 160 161 162 163 186 187
NEWLINE              : 
OBJECT               : 29
OR                   : 201
PLUS                 : 127 128 218
PLUSEQUAL            : 124
PRIVATE              : 61
PUBLIC               : 60
RBRACE               : 13 14 43 44 45 78 79 172 173 174 180 181 185
RBRACKET             : 33 152 153 186
RETURN               : 94 95
RPAREN               : 50 51 52 53 54 55 56 57 71 72 75 110 111 112 113 114 115 116 117 118 146 160 161 162 188 189 190
RSHIFT               : 216
STRCONST             : 97
TERMINATOR           : 6 9 10 22 23 64 74 77 82 85 86 92 93 94 95
TILDE                : 75 133 134
TIMES                : 222 225
TYPEOF               : 188 189 190
USING                : 6
VOID                 : 54 55 56 57 190
WHILE                : 118
XOR                  : 203
error                : 

Nonterminals, with rules where they appear

additive_expression  : 214 215 216 218 219
and_expression       : 202 203 205
argument             : 164 165
argument_list        : 110 113 114 160 161 165
argument_name        : 166
argument_value       : 166 167
array_creation_expression : 136
array_initializer    : 42 187
array_type           : 27 187
assignment           : 106 120
assignment_operator  : 121 122
block                : 63 73 76 84
break_statement      : 89
class_body           : 9 10 11 12
class_declaration    : 7 8
class_declarations   : 2 3 7
class_member_declaration : 16 17
class_member_declarations : 13 17
class_type           : 26
collection_initializer : 171
compilation_unit     : 1
conditional_and_expression : 196 197 199
conditional_expression : 194
conditional_or_expression : 195 197
constructor_body     : 70
constructor_declaration : 20
constructor_declarator : 70
continue_statement   : 90
default_argument     : 67
destructor_body      : 75
destructor_declaration : 21
element_access       : 140
element_initializer  : 182 183
element_initializer_list : 180 181 183
embedded_statement   : 83 116 117 117 118
equality_expression  : 204 205 207 208
exclusive_or_expression : 200 201 203
expression           : 41 69 95 104 116 117 118 121 122 146 154 155 169 178 186
expression_list      : 152 153 155 185
field_declaration    : 18
fixed_parameter      : 65 66
fixed_parameters     : 50 51 54 55 66 71
iMEMAi               : 148 191
identifier           : 6 9 10 11 12 30 31 32 35 39 40 62 67 68 71 72 75 102 103 112 113 122 128 130 132 134 147 149 153 157 159 168 177 192 193 193 221 225 226 227
if_statement         : 87
inclusive_or_expression : 198 199 201
initializer_value    : 177
invocation_expression : 107 142
iteration_statement  : 88
literal              : 137
local_variable_declaration : 82
local_variable_declarator : 100 101
local_variable_declarators : 99 101
local_variable_initializer : 103
member_access        : 139
member_initializer   : 175 176
member_initializer_list : 172 174 176
member_name          : 50 51 52 53 54 55 56 57
method_body          : 49
method_declaration   : 19
method_header        : 48
modifier             : 58 59
modifiers            : 9 12 22 51 53 55 57 59
multiplicative_expression : 217 218 219 222 223 224 225 226 227
non_array_type       : 33 186
non_assignment_expression : 119 184
object_creation_expression : 105 144
object_initializer   : 170
object_or_collection_initializer : 160 163 179
parenthesized_expression : 138
post_decrement_expression : 109 143
post_increment_expression : 108 141
predefined_type      : 36 149
prefix               : 30 32
primary_expression   : 110 111 126 147 156 158
primary_no_array_creation_expression : 135 152
proper_identifier    : 28 114 115
reference_type       : 24
relational_expression : 206 207 208 210 211 212 213
return_statement     : 91
shift_expression     : 209 210 211 212 213 215 216
start                : 0
statement            : 80 81
statement_expression : 86
statement_list       : 79 81
type                 : 22 23 34 50 51 52 53 67 68 99 160 161 162 163 188
type_parameter       : 25
typeof_expression    : 145
unary_expression     : 121 127 129 131 133 220 222 223 224
unbound_type_name    : 189 192
using_directive      : 4 5
using_directives     : 3 5
variable_declarator  : 37 38
variable_declarators : 22 23 38
variable_initializer : 40 46 47
variable_initializer_list : 43 45 47

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . compilation_unit
    (2) compilation_unit -> . class_declarations
    (3) compilation_unit -> . using_directives class_declarations
    (7) class_declarations -> . class_declarations class_declaration
    (8) class_declarations -> . class_declaration
    (4) using_directives -> . using_directive
    (5) using_directives -> . using_directives using_directive
    (9) class_declaration -> . modifiers CLASS identifier class_body TERMINATOR
    (10) class_declaration -> . CLASS identifier class_body TERMINATOR
    (11) class_declaration -> . CLASS identifier class_body
    (12) class_declaration -> . modifiers CLASS identifier class_body
    (6) using_directive -> . USING identifier TERMINATOR
    (58) modifiers -> . modifier
    (59) modifiers -> . modifiers modifier
    (60) modifier -> . PUBLIC
    (61) modifier -> . PRIVATE

    CLASS           shift and go to state 5
    USING           shift and go to state 11
    PUBLIC          shift and go to state 10
    PRIVATE         shift and go to state 3

    class_declarations             shift and go to state 1
    modifiers                      shift and go to state 2
    compilation_unit               shift and go to state 4
    class_declaration              shift and go to state 6
    start                          shift and go to state 7
    modifier                       shift and go to state 8
    using_directives               shift and go to state 9
    using_directive                shift and go to state 12

state 1

    (2) compilation_unit -> class_declarations .
    (7) class_declarations -> class_declarations . class_declaration
    (9) class_declaration -> . modifiers CLASS identifier class_body TERMINATOR
    (10) class_declaration -> . CLASS identifier class_body TERMINATOR
    (11) class_declaration -> . CLASS identifier class_body
    (12) class_declaration -> . modifiers CLASS identifier class_body
    (58) modifiers -> . modifier
    (59) modifiers -> . modifiers modifier
    (60) modifier -> . PUBLIC
    (61) modifier -> . PRIVATE

    $end            reduce using rule 2 (compilation_unit -> class_declarations .)
    CLASS           shift and go to state 5
    PUBLIC          shift and go to state 10
    PRIVATE         shift and go to state 3

    modifiers                      shift and go to state 2
    class_declaration              shift and go to state 13
    modifier                       shift and go to state 8

state 2

    (9) class_declaration -> modifiers . CLASS identifier class_body TERMINATOR
    (12) class_declaration -> modifiers . CLASS identifier class_body
    (59) modifiers -> modifiers . modifier
    (60) modifier -> . PUBLIC
    (61) modifier -> . PRIVATE

    CLASS           shift and go to state 15
    PUBLIC          shift and go to state 10
    PRIVATE         shift and go to state 3

    modifier                       shift and go to state 14

state 3

    (61) modifier -> PRIVATE .

    CLASS           reduce using rule 61 (modifier -> PRIVATE .)
    PUBLIC          reduce using rule 61 (modifier -> PRIVATE .)
    PRIVATE         reduce using rule 61 (modifier -> PRIVATE .)
    VOID            reduce using rule 61 (modifier -> PRIVATE .)
    OBJECT          reduce using rule 61 (modifier -> PRIVATE .)
    IDENTIFIER      reduce using rule 61 (modifier -> PRIVATE .)
    INT             reduce using rule 61 (modifier -> PRIVATE .)
    CHAR            reduce using rule 61 (modifier -> PRIVATE .)


state 4

    (1) start -> compilation_unit .

    $end            reduce using rule 1 (start -> compilation_unit .)


state 5

    (10) class_declaration -> CLASS . identifier class_body TERMINATOR
    (11) class_declaration -> CLASS . identifier class_body
    (15) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 16

    identifier                     shift and go to state 17

state 6

    (8) class_declarations -> class_declaration .

    CLASS           reduce using rule 8 (class_declarations -> class_declaration .)
    PUBLIC          reduce using rule 8 (class_declarations -> class_declaration .)
    PRIVATE         reduce using rule 8 (class_declarations -> class_declaration .)
    $end            reduce using rule 8 (class_declarations -> class_declaration .)


state 7

    (0) S' -> start .



state 8

    (58) modifiers -> modifier .

    CLASS           reduce using rule 58 (modifiers -> modifier .)
    PUBLIC          reduce using rule 58 (modifiers -> modifier .)
    PRIVATE         reduce using rule 58 (modifiers -> modifier .)
    VOID            reduce using rule 58 (modifiers -> modifier .)
    OBJECT          reduce using rule 58 (modifiers -> modifier .)
    IDENTIFIER      reduce using rule 58 (modifiers -> modifier .)
    INT             reduce using rule 58 (modifiers -> modifier .)
    CHAR            reduce using rule 58 (modifiers -> modifier .)


state 9

    (3) compilation_unit -> using_directives . class_declarations
    (5) using_directives -> using_directives . using_directive
    (7) class_declarations -> . class_declarations class_declaration
    (8) class_declarations -> . class_declaration
    (6) using_directive -> . USING identifier TERMINATOR
    (9) class_declaration -> . modifiers CLASS identifier class_body TERMINATOR
    (10) class_declaration -> . CLASS identifier class_body TERMINATOR
    (11) class_declaration -> . CLASS identifier class_body
    (12) class_declaration -> . modifiers CLASS identifier class_body
    (58) modifiers -> . modifier
    (59) modifiers -> . modifiers modifier
    (60) modifier -> . PUBLIC
    (61) modifier -> . PRIVATE

    USING           shift and go to state 11
    CLASS           shift and go to state 5
    PUBLIC          shift and go to state 10
    PRIVATE         shift and go to state 3

    class_declarations             shift and go to state 18
    modifiers                      shift and go to state 2
    class_declaration              shift and go to state 6
    modifier                       shift and go to state 8
    using_directive                shift and go to state 19

state 10

    (60) modifier -> PUBLIC .

    CLASS           reduce using rule 60 (modifier -> PUBLIC .)
    PUBLIC          reduce using rule 60 (modifier -> PUBLIC .)
    PRIVATE         reduce using rule 60 (modifier -> PUBLIC .)
    VOID            reduce using rule 60 (modifier -> PUBLIC .)
    OBJECT          reduce using rule 60 (modifier -> PUBLIC .)
    IDENTIFIER      reduce using rule 60 (modifier -> PUBLIC .)
    INT             reduce using rule 60 (modifier -> PUBLIC .)
    CHAR            reduce using rule 60 (modifier -> PUBLIC .)


state 11

    (6) using_directive -> USING . identifier TERMINATOR
    (15) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 16

    identifier                     shift and go to state 20

state 12

    (4) using_directives -> using_directive .

    USING           reduce using rule 4 (using_directives -> using_directive .)
    CLASS           reduce using rule 4 (using_directives -> using_directive .)
    PUBLIC          reduce using rule 4 (using_directives -> using_directive .)
    PRIVATE         reduce using rule 4 (using_directives -> using_directive .)


state 13

    (7) class_declarations -> class_declarations class_declaration .

    CLASS           reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    PUBLIC          reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    PRIVATE         reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    $end            reduce using rule 7 (class_declarations -> class_declarations class_declaration .)


state 14

    (59) modifiers -> modifiers modifier .

    CLASS           reduce using rule 59 (modifiers -> modifiers modifier .)
    PUBLIC          reduce using rule 59 (modifiers -> modifiers modifier .)
    PRIVATE         reduce using rule 59 (modifiers -> modifiers modifier .)
    VOID            reduce using rule 59 (modifiers -> modifiers modifier .)
    OBJECT          reduce using rule 59 (modifiers -> modifiers modifier .)
    IDENTIFIER      reduce using rule 59 (modifiers -> modifiers modifier .)
    INT             reduce using rule 59 (modifiers -> modifiers modifier .)
    CHAR            reduce using rule 59 (modifiers -> modifiers modifier .)


state 15

    (9) class_declaration -> modifiers CLASS . identifier class_body TERMINATOR
    (12) class_declaration -> modifiers CLASS . identifier class_body
    (15) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 16

    identifier                     shift and go to state 21

state 16

    (15) identifier -> IDENTIFIER .

    LBRACKET        reduce using rule 15 (identifier -> IDENTIFIER .)
    INCREMENT       reduce using rule 15 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 15 (identifier -> IDENTIFIER .)
    DECREMENT       reduce using rule 15 (identifier -> IDENTIFIER .)
    MEMBERACCESS    reduce using rule 15 (identifier -> IDENTIFIER .)
    EQUALS          reduce using rule 15 (identifier -> IDENTIFIER .)
    PLUSEQUAL       reduce using rule 15 (identifier -> IDENTIFIER .)
    MINUSEQUAL      reduce using rule 15 (identifier -> IDENTIFIER .)
    TIMES           reduce using rule 15 (identifier -> IDENTIFIER .)
    DIVIDE          reduce using rule 15 (identifier -> IDENTIFIER .)
    MOD             reduce using rule 15 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 15 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 15 (identifier -> IDENTIFIER .)
    LSHIFT          reduce using rule 15 (identifier -> IDENTIFIER .)
    RSHIFT          reduce using rule 15 (identifier -> IDENTIFIER .)
    LT              reduce using rule 15 (identifier -> IDENTIFIER .)
    GT              reduce using rule 15 (identifier -> IDENTIFIER .)
    LEQ             reduce using rule 15 (identifier -> IDENTIFIER .)
    GEQ             reduce using rule 15 (identifier -> IDENTIFIER .)
    EQ              reduce using rule 15 (identifier -> IDENTIFIER .)
    NE              reduce using rule 15 (identifier -> IDENTIFIER .)
    AND             reduce using rule 15 (identifier -> IDENTIFIER .)
    XOR             reduce using rule 15 (identifier -> IDENTIFIER .)
    OR              reduce using rule 15 (identifier -> IDENTIFIER .)
    CONAND          reduce using rule 15 (identifier -> IDENTIFIER .)
    CONOR           reduce using rule 15 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 15 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 15 (identifier -> IDENTIFIER .)
    TERMINATOR      reduce using rule 15 (identifier -> IDENTIFIER .)
    RBRACKET        reduce using rule 15 (identifier -> IDENTIFIER .)
    RBRACE          reduce using rule 15 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 15 (identifier -> IDENTIFIER .)
    COLON           reduce using rule 15 (identifier -> IDENTIFIER .)
    LBRACE          reduce using rule 15 (identifier -> IDENTIFIER .)


state 17

    (10) class_declaration -> CLASS identifier . class_body TERMINATOR
    (11) class_declaration -> CLASS identifier . class_body
    (13) class_body -> . LBRACE class_member_declarations RBRACE
    (14) class_body -> . LBRACE RBRACE

    LBRACE          shift and go to state 22

    class_body                     shift and go to state 23

state 18

    (3) compilation_unit -> using_directives class_declarations .
    (7) class_declarations -> class_declarations . class_declaration
    (9) class_declaration -> . modifiers CLASS identifier class_body TERMINATOR
    (10) class_declaration -> . CLASS identifier class_body TERMINATOR
    (11) class_declaration -> . CLASS identifier class_body
    (12) class_declaration -> . modifiers CLASS identifier class_body
    (58) modifiers -> . modifier
    (59) modifiers -> . modifiers modifier
    (60) modifier -> . PUBLIC
    (61) modifier -> . PRIVATE

    $end            reduce using rule 3 (compilation_unit -> using_directives class_declarations .)
    CLASS           shift and go to state 5
    PUBLIC          shift and go to state 10
    PRIVATE         shift and go to state 3

    modifiers                      shift and go to state 2
    class_declaration              shift and go to state 13
    modifier                       shift and go to state 8

state 19

    (5) using_directives -> using_directives using_directive .

    USING           reduce using rule 5 (using_directives -> using_directives using_directive .)
    CLASS           reduce using rule 5 (using_directives -> using_directives using_directive .)
    PUBLIC          reduce using rule 5 (using_directives -> using_directives using_directive .)
    PRIVATE         reduce using rule 5 (using_directives -> using_directives using_directive .)


state 20

    (6) using_directive -> USING identifier . TERMINATOR

    TERMINATOR      shift and go to state 24


state 21

    (9) class_declaration -> modifiers CLASS identifier . class_body TERMINATOR
    (12) class_declaration -> modifiers CLASS identifier . class_body
    (13) class_body -> . LBRACE class_member_declarations RBRACE
    (14) class_body -> . LBRACE RBRACE

    LBRACE          shift and go to state 22

    class_body                     shift and go to state 25

state 22

    (13) class_body -> LBRACE . class_member_declarations RBRACE
    (14) class_body -> LBRACE . RBRACE
    (16) class_member_declarations -> . class_member_declaration
    (17) class_member_declarations -> . class_member_declarations class_member_declaration
    (18) class_member_declaration -> . field_declaration
    (19) class_member_declaration -> . method_declaration
    (20) class_member_declaration -> . constructor_declaration
    (21) class_member_declaration -> . destructor_declaration
    (22) field_declaration -> . modifiers type variable_declarators TERMINATOR
    (23) field_declaration -> . type variable_declarators TERMINATOR
    (48) method_declaration -> . method_header
    (49) method_declaration -> . method_body
    (70) constructor_declaration -> . constructor_declarator constructor_body
    (75) destructor_declaration -> . TILDE identifier LPAREN RPAREN destructor_body
    (58) modifiers -> . modifier
    (59) modifiers -> . modifiers modifier
    (24) type -> . reference_type
    (25) type -> . type_parameter
    (50) method_header -> . type member_name LPAREN fixed_parameters RPAREN
    (51) method_header -> . modifiers type member_name LPAREN fixed_parameters RPAREN
    (52) method_header -> . type member_name LPAREN RPAREN
    (53) method_header -> . modifiers type member_name LPAREN RPAREN
    (54) method_header -> . VOID member_name LPAREN fixed_parameters RPAREN
    (55) method_header -> . modifiers VOID member_name LPAREN fixed_parameters RPAREN
    (56) method_header -> . VOID member_name LPAREN RPAREN
    (57) method_header -> . modifiers VOID member_name LPAREN RPAREN
    (63) method_body -> . block
    (64) method_body -> . TERMINATOR
    (71) constructor_declarator -> . identifier LPAREN fixed_parameters RPAREN
    (72) constructor_declarator -> . identifier LPAREN RPAREN
    (60) modifier -> . PUBLIC
    (61) modifier -> . PRIVATE
    (26) reference_type -> . class_type
    (27) reference_type -> . array_type
    (35) type_parameter -> . identifier
    (36) type_parameter -> . predefined_type
    (78) block -> . LBRACE RBRACE
    (79) block -> . LBRACE statement_list RBRACE
    (15) identifier -> . IDENTIFIER
    (28) class_type -> . proper_identifier
    (29) class_type -> . OBJECT
    (33) array_type -> . non_array_type LBRACKET RBRACKET
    (150) predefined_type -> . INT
    (151) predefined_type -> . CHAR
    (30) proper_identifier -> . prefix identifier
    (34) non_array_type -> . type
    (31) prefix -> . identifier MEMBERACCESS
    (32) prefix -> . prefix identifier MEMBERACCESS

    RBRACE          shift and go to state 41
    TILDE           shift and go to state 37
    VOID            shift and go to state 28
    TERMINATOR      shift and go to state 45
    PUBLIC          shift and go to state 10
    PRIVATE         shift and go to state 3
    LBRACE          shift and go to state 48
    IDENTIFIER      shift and go to state 16
    OBJECT          shift and go to state 29
    INT             shift and go to state 51
    CHAR            shift and go to state 47
